[package]
name = "tree_lens"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
git2 = { version = "0.20.4", optional = true }  # <-- optional now
colored = "3.1.1"
regex = "1.9.3"
chrono = { version = "0.4.26", features = ["serde"] }
crossterm = "0.29.0"
md5 = "0.8.0"
ignore = "0.4.25"
humansize = "2.1.3"
toml = "1.1.1"
dirs = "6.0.0"

[features]
default = ["git"]
git = ["git2"]

[dev-dependencies]
tempfile = "3.6.0"
